--- a/style/ui_style.css
+++ b/style/ui_style.css
@@ -689,10 +689,10 @@ header{
 /* 分数板 */
 .scores-container{
     position: fixed;
-    top: 23.5%;
-    right: 20%;
-    height: 200px;
-    width: 200px;
+    top: 12%;
+    left: 36%;
+    height: 90px;
+    width: 300px;
     padding: 10px 14px;
     background: var(--shell-color);
     transition: all 0.3s ease;
@@ -702,29 +702,40 @@ header{
 }
 .score-container{
     position: absolute;
-    height: 85px;
-    width: 181px;
+    display: flex;
+    height: 78px;
+    width: 140px;
     border-radius: 10px;
-    top: 4%;
-    left: 5%;
+    top: 7%;
+    left: 2%;
     background: var(--primary-color-light);
     color: var(--text-color);
     box-shadow: 0 2px 6px var(--shadow);
     line-height: 85px;
     font-size: 20px;
+    justify-content: center; /* 水平居中 */  
 }
 .best-container{
     position: absolute;
-    height: 85px;
-    width: 181px;
+    display: flex;
+    height: 78px;
+    width: 140px;
     border-radius: 10px;
-    top: 52%;
-    left: 5%;
+    top: 7%;
+    left: 51%;
     background: var(--primary-color-light);   /* --primary-color */
     color: var(--text-color);
     box-shadow: 0 2px 6px var(--shadow);
     line-height: 85px;
     font-size: 20px;
+    justify-content: center; /* 水平居中 */  
+}
+.scores{
+    position: absolute;
+    font-size: 30px;
+    font-weight: 700;
+    top: 10%;
+    text-align: center;
 }
 .score-container:after{
     content: "分数";
@@ -861,4 +872,38 @@ header{
     transform: translate(-50%, -50%) scale(1); /* 展开到正常大小 */  
     opacity: 0.98;  
     transition: transform 0.3s ease, opacity 0.3s ease;  
+}
+
+/* 游戏结束弹出层 */
+.gameOverBoard{
+    position: fixed;    /* 这里更改了position的属性值为fixed（原本为absolute） */
+    top: 50%;
+    left: 50%;
+    width: 470px;
+    height: 470px;
+    background-color: var(--grid-bg-color);
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);  
+    transition: transform 0.3s ease, opacity 0.3s ease; 
+}
+.gameOverBoard.active{  
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0.95;  
+    transition: transform 0.3s ease, opacity 0.3s ease;  
+}
+#loseText{
+    position: fixed;
+    font-size: 30px;
+    font-weight: 600;
+    top: 30%;
+    left: 10%;
+    color: #fff;
+}
+#loseTextTip{
+    position: fixed;
+    font-size: 25px;
+    font-weight: 600;
+    top: 60%;
+    left: 24%;
+    color: #dad5d5;
 }
