--- a/style/grid.css
+++ b/style/grid.css
@@ -31,3 +31,15 @@
     border-radius: 6px;
     box-shadow: 0 3px 3px var(--grid-shadow);
 }
+
+
+.containerAll{
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    height: 800px;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    transform: translate(-50%, -50%);
+}
