--- a/style/ui_style.css
+++ b/style/ui_style.css
@@ -817,6 +817,7 @@ header{
     width: 100vh;
     z-index: 200;  
     opacity: 0;
+    overflow: hidden;
     background-color: var(--popbackground);
     transition: transform 0.4s ease, opacity 0.4s ease;  
 } 
@@ -824,6 +825,12 @@ header{
     transform: translate(-50%, -50%) scale(1);
     opacity: 0.95;  
     transition: transform 0.4s ease, opacity 0.4s ease;  
+}
+#Pop-achievementHeader{
+    background-color: red;
+    position: absolute;
+    height: 90px;
+    width: 100px;
 }
 #iconAchievement{
     min-width: 60px;
@@ -857,8 +864,8 @@ header{
 /* 分数板 */
 .scores-container{
     position: fixed;
-    top: 12%;
-    left: 36%;
+    top: 7.8%;
+    left: 3%;
     height: 90px;
     width: 300px;
     padding: 10px 14px;
@@ -917,8 +924,8 @@ header{
     position: fixed;
     outline: none;
     padding: 10px 22px;
-    top: 16%;
-    left: 56%;
+    top: 13%;
+    left: 70%;
     border-radius: 10px;
     border: none;
     background-color: var(--startGameBtn-color);
@@ -1067,7 +1074,7 @@ header{
 
 /* 游戏胜利弹出层 */
 .gameWinBoard{
-    position: fixed;    /* 这里更改了position的属性值为fixed（原本为absolute） */
+    position: fixed;    
     top: 50%;
     left: 50%;
     width: 470px;
