--- a/style/grid.css
+++ b/style/grid.css
@@ -43,3 +43,9 @@
     position: fixed;
     transform: translate(-50%, -50%);
 }
+#tips{
+    color: gray;
+    position: fixed;
+    bottom: 16%;
+    right: 3%;
+}
