--- a/style/ui_style.css
+++ b/style/ui_style.css
@@ -274,6 +274,40 @@ header{
     opacity: 1;  
     transition: transform 0.4s ease, opacity 0.4s ease;  
 }
+#Pop-introductionHeader{
+    position: absolute;
+    top: 1%;
+    left: 1%;
+    height: 7vh;
+    width: 110vh;
+    z-index: 201;
+}
+.introduction-container{
+    width: 100%;
+    top: 30%;
+    max-height: calc(100% - 7vh);
+    overflow-y: auto;
+    margin-top: 7vh;
+}
+#iconIntroduction{
+    min-width: 60px;
+    border-radius: 6px;
+    height: 5%;
+    top: 50%;
+    display: flex;
+    position: absolute;
+    justify-content: left;
+    font: 600 35px ''; 
+}
+#textIntroduction{
+    display: flex;
+    position: absolute; 
+    font-size: 36px;
+    font-weight: bold;
+    color: var(--text-color);
+    left: 5.5%;
+    top: 10%;
+}
 #closeBtnIntroduction{
     border-radius: 50%;
     border: none;
@@ -282,8 +316,8 @@ header{
     height: 1px;
     cursor: pointer;
     position: absolute;
-    right: 6%;
-    top: 4%;
+    right: 4%;
+    top: 20%;
 }
 
 /* 难度设置 */
@@ -1201,7 +1235,7 @@ li{
 
 /* 游戏结束弹出层 */
 .gameOverBoard{
-    position: fixed;    /* 这里更改了position的属性值为fixed（原本为absolute） */
+    position: fixed;   
     top: 50%;
     left: 50%;
     width: 470px;
